# homework_6.2

./: .env.sample  README.md  data.json  groups.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py  reset_db.py  slug.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_contact.py  0004_blogpost.py  0005_version.py  0006_product_owner.py  0007_product_is_published.py  0008_alter_product_options.py
catalog/templates/: contacts.html  create_product.html  home.html  latest_products.html  product_detail.html  product_list.html
catalog/templates/catalog/: blogpost_detail.html  blogpost_form.html  blogpost_list.html  contact_list.html  home.html  latest_products.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: media_tags.py
config/: settings.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/users/: login.html  password_reset.html  user_detail.html  user_form.html  user_update.html
